@@ -68,7 +68,7 @@ class FeedWebView(WebKit.WebView):
         # print js
         self.execute_script(js)
 
-        GLib.timeout_add(100, self.execute_script, 'scroll()')
+        GLib.timeout_add(150, self.execute_script, 'scrollToBottom()')
 
     def on_popup(self, view, menu):
         menu.destroy()
